--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "performance-notes",
+  "name": "frontend-perf-notes",
   "version": "0.0.0",
   "description": "",
   "main": "gulpfile.js",
