--- a/package.json
+++ b/package.json
@@ -2,27 +2,13 @@
   "name": "frontend-perf-notes",
   "version": "0.0.0",
   "description": "",
-  "main": "gulpfile.js",
+  "main": "Gruntfile.js",
   "scripts": {
-    "test": "gulp ci"
+    "test": "grunt ci"
   },
   "author": "makotot",
   "license": "MIT",
   "devDependencies": {
-    "gulp": "~3.8.10",
-    "gulp-assemble": "~0.1.7",
-    "gulp-eslint": "~0.2.0",
-    "gulp-connect": "~2.2.0",
-    "gulp-less": "~2.0.1",
-    "run-sequence": "~1.0.2",
-    "bower": "~1.3.12",
-    "gulp-util": "~3.0.1",
-    "gulp-csslint": "~0.1.5",
-    "gulp-minify-html": "~0.1.7",
-    "del": "~1.1.0",
-    "gulp-browserify": "~0.5.0",
-    "gulp-uglify": "~1.0.2",
-    "rimraf": "~2.2.8",
-    "gulp-ruby-sass": "~0.7.1"
+    "bower": "~1.3.12"
   }
 }
