--- a/package.json
+++ b/package.json
@@ -9,6 +9,14 @@
   "author": "makotot",
   "license": "MIT",
   "devDependencies": {
-    "bower": "~1.3.12"
+    "assemble": "^0.4.42",
+    "bower": "~1.3.12",
+    "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-connect": "^0.9.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-eslint": "^2.1.0",
+    "jit-grunt": "^0.9.0",
+    "time-grunt": "^1.0.0"
   }
 }
