--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "grunt": "^0.4.5",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-connect": "^0.9.0",
+    "grunt-contrib-sass": "^0.8.1",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-eslint": "^2.1.0",
     "jit-grunt": "^0.9.0",
