--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/scss/vendor/normalize.scss"]
 	path = src/scss/vendor/normalize.scss
 	url = https://github.com/hail2u/normalize.scss.git
+[submodule "src/scss/vendor/font-awesome"]
+	path = src/scss/vendor/font-awesome
+	url = https://github.com/FortAwesome/Font-Awesome.git
