--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
   "scripts": {
     "test": "grunt ci"
   },
+  "homepage": "https://github.com/makotot/frontend-perf-notes",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/makotot/frontend-perf-notes.git"
+  },
   "author": "makotot",
   "license": "MIT",
   "devDependencies": {
