--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-eslint": "^3.0.0",
     "handlebars-helper-md": "^0.2.0",
+    "handlebars-helper-minify": "^0.1.3",
     "jit-grunt": "^0.9.0",
     "time-grunt": "^1.0.0"
   }
