--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "grunt-contrib-sass": "^0.8.1",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-eslint": "^5.1.0",
+    "handlebars-helper-github-pages": "0.0.1",
     "handlebars-helper-md": "^0.2.0",
     "handlebars-helper-minify": "git://github.com/makotot/handlebars-helper-minify#update-minifier",
     "jit-grunt": "^0.9.0",
