--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "grunt-scss-lint": "^0.3.4",
     "handlebars-helper-github-pages": "0.0.1",
     "handlebars-helper-md": "^0.2.0",
-    "handlebars-helper-minify": "git://github.com/makotot/handlebars-helper-minify#update-minifier",
+    "handlebars-helper-minify": "git://github.com/helpers/handlebars-helper-minify",
     "jit-grunt": "^0.9.1",
     "time-grunt": "^1.0.0"
   }
